k8s/services.yml
kind: Service
apiVersion: v1
metadata:
  name: api
  labels:
    tier: backend
    env: production
spec:
  type: NodePort
  selector:
    app: api
    tier: backend
    env: production
  ports:
    - name: 'php'
      port: 9000
      protocol: TCP
    - name: 'nginx'
      port: 80
      targetPort: 8080
      protocol: TCP
